--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">TakeAPart</string>
+    <string name="app_name">Take A Part</string>
+    <string name="add_project">Add Project</string>
+    <string name="add_project_title">Create new project</string>
+    <string name="project_name_text">Project Name</string>
+    <string name="due_date_text">Due Date</string>
 </resources>
